adjusted width to prevent overflow in x axis;

--- a/react-vite/src/components/SplashPage/SplashPage.css
+++ b/react-vite/src/components/SplashPage/SplashPage.css
@@ -1,10 +1,11 @@
 .splashpage-container {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: space-between;
     font-family: monospace;
     background: center / contain repeat url(https://skin-not-rx-bucket.s3.us-east-2.amazonaws.com/static/skincare-products_DALL-E.png);
+    overflow-x: hidden;
 
 }
 
